--- a/src/index.html
+++ b/src/index.html
@@ -923,6 +923,120 @@
           </div>
         </div>
       </section>
+
+      <!-- faqs area start -->
+      <section id="faqs" class="section-wrapper bg-gradient-to-tr">
+        <div class="main-container">
+          <div id="section-title" class="my-8 px-3">
+            <h1 class="text-4xl sm:text-5xl font-semibold leading-snug">FAQs</h1>
+          </div>
+          <div id="faqs-container" class="px-3 grid grid-cols-1 lg:grid-cols-2 items-start gap-6">
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-1">
+                <h4 class="text-xl font-semibold">Is ToDesktop For Me?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-1" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">That depends! If you would like to distribute your web app to your users as a downloadable desktop app then ToDesktop is for you.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">If you want to make a desktop app of a website for your personal use, ToDesktop is overkill.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">What’s the difference? There are extra considerations when creating a desktop app for distribution to customers. Here are the top 3:</p>
+                <ul class="mt-6 list-disc pl-4">
+                  <li class="text-base mb-2 text-gray-800"><span class="text-base font-semibold">Installer —</span> Mac users expect a “drag to applications” DMG file. Windows users expect an installer and they also expect to be able to uninstall it from the control panel.</li>
+                  <li class="text-base mb-2 text-gray-800"><span class="text-base font-semibold">Code Signing —</span> By default Windows Authenticode and Apple Gatekeeper will stop your desktop app opening.Signing your code allows your app to open without</li>
+                  <li class="text-base mb-2 text-gray-800"><span class="text-base font-semibold">Auto-update —</span> There is a web browser running “underneath” your desktop app. It’s important to keep this updated for two reasons.
+                    <ul class="mt-2 list-decimal ml-4">
+                      <li class="mb-2 text-base text-gray-700 font-medium">Security issues + vulnerabilities can occur. Auto-update ensures that they stay patched over time.</li>
+                      <li class="mb-2 text-base text-gray-700 font-medium">You don’t want to be stuck supporting an old web browser in 5 years from now. This can happen if your desktop app’s underlying web browser hasn’t updated.</li>
+                    </ul>
+                  </li>
+                </ul>
+                <p class="text-base font-medium text-gray-800 mt-4">ToDesktop offers these features as standard! Saving you a ton of development time and effort.</p>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-2">
+                <h4 class="text-xl font-semibold">Can I try ToDesktop without buying?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-2" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">Yes. You can get started by downloading ToDesktop Builder at no cost. After installing it, you can build your desktop application and preview it by clicking the “Run” button. This allows you to test the app on your own computer to ensure it performs to your expectations.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">If you’re using a Mac and wish to add the app to your “Applications” folder for easier access, simply follow these steps:</p>
+                <ul class="mt-6 list-decimal pl-4">
+                  <li class="text-base mb-2 text-gray-800"><span class="text-base font-semibold">Right-click —</span> on the app’s dock icon while it’s running.</li>
+                  <li class="text-base mb-2 text-gray-800"><span class="text-base font-semibold">Select “Options” —</span> and then “Show in Finder.”</li>
+                  <li class="text-base mb-2 text-gray-800"><span class="text-base font-semibold">Drag —</span> the application into your Applications directory, allowing you to use it just like any other installed app.
+                  </li>
+                </ul>
+                <p class="text-base font-medium text-gray-800 mt-4">Should you decide to distribute your application to a wider audience—complete with code signing and a native installer—you’ll need to purchase a subscription.</p>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-3">
+                <h4 class="text-xl font-semibold">Will my app work offline?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-3" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">Think of ToDesktop as a normal browser that is just for your website. Your website will work exactly as it does in Chrome, or any other browser.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">If you want to make the app work offline you’ll need to make it into a progressive web app. Include a web manifest, service workers and client-side storage and voila — offline support.</p>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-4">
+                <h4 class="text-xl font-semibold">Which version of Electron/Chromium is used?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-4" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">ToDesktop is currently based on Chromium 118 and Electron 27. When Electron releases a new version you can expect us to update it shortly after. We prioritize security fixes and endeavour to release them as soon as possible. All updates are pushed out to all your users over auto-update.</p>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-5">
+                <h4 class="text-xl font-semibold">How does my app get updated?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-5" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">Every time your app launches it contacts the ToDesktop update server. If there is a newer version available then it gets downloaded automatically. The user gets a notification that the new version will be installed the next time that they open the app.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">Auto-updates are published on two occasions:</p>
+                <ul class="mt-6 list-disc">
+                  <li class="text-base text-gray-800 font-medium mb-2">An app detail (name, icon, default window dimensions) is changed.</li>
+                  <li class="text-base text-gray-800 font-medium mb-2">Electron or the ToDesktop standard library is updated.</li>
+                </ul>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-6">
+                <h4 class="text-xl font-semibold">What support do you offer?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-6" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">We’ll do our best to help you with any issue you encounter with ToDesktop. You can get in touch with us via email and chat.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">On the Startup plan we deal with the same day or the next day.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">On the Business plan you get concierge onboarding. This is a video/phoneonboarding session where we take you through the product and make sure you’re happy set up. You also get priority support with your issues answered first. You can also schedule a phone/video support session if necessary.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">You can email us at <a href="#" class="text-base text-gray-600 border-b border-b-gray-300 border-dotted">support@todesktop.com</a> or <a href="#" class="text-base text-gray-600 border-b border-b-gray-300 border-dotted">chat with us</a></p>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-7">
+                <h4 class="text-xl font-semibold">How does ToDesktop work under the hood?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-7" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">It can help to think of ToDesktop as a custom web browser dedicated to your web app or website. It shows a live version of your site or web app at all times, just like a web browser. There is no toolbar or address bar or refresh buttons but it behaves and functions just like a web browser. This means you don’t need to do anything to your existing site, it will just work. If your site works in Google Chrome then it is compatible with ToDesktop.</p>
+                <p class="text-base font-medium text-gray-800 mb-3">ToDesktop uses a technology called Electron. You don’t need Electron (or even coding) experience to create a desktop app with ToDesktop. Rest assured, the underlying “browser” engine is updated regularly through auto-updates. So the desktop version of your app will always have the latest web features available.</p>
+              </dd>
+            </div>
+            <div class="flex flex-col border border-gray-300 bg-gray-50 p-6 rounded-lg cursor-pointer">
+              <dt class="flex justify-between items-center" aria-controls="faqs-8">
+                <h4 class="text-xl font-semibold">What features are on the product roadmap?</h4>
+                <i class="fa-solid fa-chevron-up text-xl text-gray-600 font-light -rotate-180 transition-transform"></i>
+              </dt>
+              <dd id="faqs-8" class="hidden mt-4">
+                <p class="text-base font-medium text-gray-800 mb-3">If you have any suggestions, we’d love to hear! Please send us an email at <a href="#" class="text-gray-600 border-b border-gray-300 border-dotted">support@todesktop.com</a> or <a href="#" class="text-gray-600 border-b border-gray-300 border-dotted">send us a message</a>.</p>
+              </dd>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- javascript files -->
