--- a/src/index.html
+++ b/src/index.html
@@ -1039,6 +1039,32 @@
       </section>
     </main>
 
+    <!-- footer start -->
+    <footer class="section-wrapper bg-gradient-to-br">
+      <div class="main-container">
+        <div id="top-footer" class="px-8 mx-3 bg-gray-50 border border-gray-300 rounded-lg py-12 flex flex-col justify-between items-center md:flex-row-reverse gap-4">
+          <div class="flex flex-col justify-center items-center md:flex-row gap-6">
+            <a href="#" class="text-gray-600 text-lg font-medium hover:text-gray-900">Documentation</a>
+            <ul class="flex gap-6">
+              <li><a href="#" class="text-gray-600 text-lg font-medium hover:text-gray-900"><i class="fa-brands fa-twitter"></i></a></li>
+              <li><a href="#" class="text-gray-600 text-lg font-medium hover:text-gray-900"><i class="fa-brands fa-github"></i></a></li>
+            </ul>
+          </div>
+          <a href="#" class="flex items-center gap-2 flex-1">
+            <img class="max-w-12 max-h-12 object-cover" src="./Images/asset 0.png" alt="brand">
+            <span class="text-lg font-semibold">ToDesktop</span>
+          </a>
+        </div>
+        <div class="flex flex-col justify-center items-center gap-4 p-6 mt-6">
+          <div class="flex gap-2 items-center">
+            <img class="w-3 h-3" src="./Images/asset 49.svg" alt="logo">
+            <p class="text-sm font-medium text-gray-700">A Y Combinator company.</p>
+          </div>
+          <p class="text-sm text-gray-500 font-medium">&copy;<span id="year" class="px-1"></span>ToDesktop, Inc. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
+
     <!-- javascript files -->
     <script src="./JavaScripts/app.js"></script>
   </body>
